Bump Apicurio client from 3.1.4 to 3.1.7, allow build with JDK25 (#2293)
Signed-off-by: Michael Edgar <medgar@redhat.com>